deploy/kustomize/overlays/nonprod-eu-west-1/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
spec:
  template:
    spec:
      containers:
        - name: demo-api
